updated html file

--- a/index.html
+++ b/index.html
@@ -14,6 +14,50 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <div class="container">
+    <header>
+      <h1>Randy Warrington</h1>
+      <h3>Full Stack Developer</h3>
+        <div class="contact-info">
+          <ul style="list-style-type:disc;">
+            <li>Email: Warrington_Randy@outlook.com</li>
+            <li>Phone: 443-630-5450</li>
+            <li>Address: Maryland</li>
+          </ul>
+    </header>
+
+      <section class="about">
+        <h2>About Me</h2>
+          <p> Hello my name is Randy Doral Warrington II and I am an aspiring Full Stack Developer. I am currently enrolled in Lambda School's Full Stack Coding Bootcamp. If you are interested in me, please feel free to contact me.</p>
+      </section>
+
+      <section class="skills">
+        <h2>Skills</h2>
+            <p>HTML CSS GITHUB</p>    
+      </section>
+      
+      <section class="experience">
+        <h2>Work Experience</h2>
+          <div class="work1">
+            <h4>Maintenance Technician Dec 2018-Present</h4>
+            <p>Morgan Properties</P>
+            <ul style="list-style-type:disc;">
+            <li>Complete work orders given for the day</li>
+            <li>Make vacant apartments ready for new move ins</li>
+            <li>Keep front of apartment building clean</li>
+          </ul>
+        </div>
+      
+        <div class="work2">
+          <h4>Maintenance Technician Aug 2018-Dec 2018</h4>
+          <p>Home Properties</p>
+          <ul style="list-style-type:disc;">
+            <li>Complete work orders given for the day</li>
+            <li>Make vacant apartments ready for new move ins</li>
+            <li>Help out in office when needed</li>
+          </ul>
+      </section>
+
+  </div>
 </body>
 </html>
